@@ -1,3 +1,7 @@
+2013-11-03  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* include/Charset.H (OpenAxiom): New.
+
 2013-07-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* interp/sys-driver.boot (initializeGlobalState): Tell GCL not to
